--- a/GraphicsEnviromentComp2/GraphicsEnviromentComp2.csproj
+++ b/GraphicsEnviromentComp2/GraphicsEnviromentComp2.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Commands\CircleCommand.cs" />
     <Compile Include="Commands\ClearCommand.cs" />
     <Compile Include="Commands\DrawToCommand.cs" />
+    <Compile Include="Commands\EndIfCommand.cs" />
     <Compile Include="Commands\ICommandInterface.cs" />
     <Compile Include="Commands\LoadCommand.cs" />
     <Compile Include="Commands\MoveToCommand.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="GraphicContext\GraphicsContext.cs" />
     <Compile Include="GraphicContext\VariableContext.cs" />
     <Compile Include="Helpers\CommandHelper.cs" />
+    <Compile Include="IfCommand.cs" />
     <Compile Include="Parser\CommandParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
