--- a/GraphicsEnviromentComp2Tests/GraphicsEnviromentComp2Tests.csproj
+++ b/GraphicsEnviromentComp2Tests/GraphicsEnviromentComp2Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Commands\CircleCommandTests.cs" />
     <Compile Include="Commands\ClearCommandTests.cs" />
     <Compile Include="Commands\DrawToCommandTests.cs" />
+    <Compile Include="Commands\EndIfCommandTests.cs" />
     <Compile Include="Commands\MoveToCommandTests.cs" />
     <Compile Include="Commands\ResetCommandTests.cs" />
     <Compile Include="Commands\SquareCommandTests.cs" />
