--- a/GraphicsEnviromentComp2/GraphicsEnviromentComp2.csproj
+++ b/GraphicsEnviromentComp2/GraphicsEnviromentComp2.csproj
@@ -54,7 +54,6 @@
     <Compile Include="Commands\DrawToCommand.cs" />
     <Compile Include="Commands\EndIfCommand.cs" />
     <Compile Include="Commands\ICommandInterface.cs" />
-    <Compile Include="Commands\IncrementCommand.cs" />
     <Compile Include="Commands\LoadCommand.cs" />
     <Compile Include="Commands\LoopCommand.cs" />
     <Compile Include="Commands\MoveToCommand.cs" />
@@ -74,7 +73,7 @@
     <Compile Include="GraphicContext\VariableContext.cs" />
     <Compile Include="Helpers\CommandHelper.cs" />
     <Compile Include="Commands\IfCommand.cs" />
-    <Compile Include="MethodInvocationCommand.cs" />
+    <Compile Include="Commands\MethodInvocationCommand.cs" />
     <Compile Include="Parser\CommandParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
